# xVKSorry

./: .gitignore  config.py  const.py  main.py  pyproject.toml  update.py  utils.py
bot/: controller.py  decorators.py  rules.py
bot/command/: __init__.py  vkontakte_bot_create.py  vkontakte_bot_ping.py  vkontakte_bot_restart.py  vkontakte_bot_start.py  vkontakte_bot_stop.py  vkontakte_bot_update.py
models/: botmodel.py  usermodel.py
user/: controller.py  decorators.py  methods.py  rules.py
user/commands/: __init__.py  vkontakte_user_alias.py  vkontakte_user_chats.py  vkontakte_user_commands.py  vkontakte_user_deletter.py  vkontakte_user_help.py  vkontakte_user_ignore.py  vkontakte_user_info.py  vkontakte_user_message.py  vkontakte_user_mute.py  vkontakte_user_ping.py  vkontakte_user_prefix.py  vkontakte_user_push.py  vkontakte_user_rank.py  vkontakte_user_root.py  vkontakte_user_save.py  vkontakte_user_scripts.py  vkontakte_user_server.py  vkontakte_user_status.py  vkontakte_user_template.py  vkontakte_user_trigger.py  vkontakte_user_trusted.py
user/manager/: alias.py  script.py  template.py  trigger.py  user.py
user/scripts/: vkontakte_user_added_recomendation.py  vkontakte_user_clear_deleted.py  vkontakte_user_clear_subscriber.py  vkontakte_user_like_subscriber.py  vkontakte_user_request_accept.py
views/: __init__.py  account.py  connection.py
